chore: java doc, test style